--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,6 +14,10 @@ h1 {
     text-align: center;
 }
 
+.timer {
+    text-align: center;
+}
+
 #description {
     text-align: center;
     padding: 1%;
@@ -31,12 +35,13 @@ h1 {
 .button {
     padding: 1% 2%;
     font-weight: bold;
+    margin: 2% 15%;
 }
 
 .answers {
     display: flex;
-    flex-direction: row;
-    justify-content: left;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 #start {
